added job titles to team page and changed logo image

--- a/app.css
+++ b/app.css
@@ -74,6 +74,11 @@ color:#688E56;
 text-align:left;
 }
 
+.profile{
+	height:120px;
+	padding: 10px;
+	/*background-color: #bbb;*/
+}
 
 #myCarousel{
 	height: 400px;
